src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This shows the parent account number.</description>
        <label>Account Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.OwnerId</field>
                <operation>equals</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <description>The total amount to be deposit which is half of the total opportunity amount.</description>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Site__c</fullName>
        <description>Endpoint to your external site.</description>
        <label>External Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Parent account industry field</description>
        <formula>Text(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoices_Link__c</fullName>
        <formula>&quot;http://paymentconnect-developer-edition.na17.force.com/pmtx/quot__SiteInvoice?id=&quot; +Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoices Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotes_Link__c</fullName>
        <formula>&quot;http://paymentconnect-developer-edition.na17.force.com/pmtx/quot__SiteQuoteApproval?id=&quot; +Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotes Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seconday_Email__c</fullName>
        <description>This is an alternative email field.</description>
        <label>Seconday Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Balance__c</fullName>
        <description>Total Amount - Payments Made</description>
        <formula>MAX(NULLVALUE(pymt__Total_Amount__c,0) - NULLVALUE(pymt__Payments_Made__c,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount - Payments Made</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_ISO_Code__c</fullName>
        <description>PaymentConnect currency code.</description>
        <inlineHelpText>PaymentConnect currency code.</inlineHelpText>
        <label>Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Frequency__c</fullName>
        <inlineHelpText>Recurring payments frequency</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Number_of_Payments_Made__c</fullName>
        <inlineHelpText>Total number of settled or completed payments related to this opportunity. Updated automatically when a payment record is added, updated or removed.</inlineHelpText>
        <label>Number of Payments Made</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Occurrences__c</fullName>
        <inlineHelpText>Number of recurring payment occurrences.</inlineHelpText>
        <label>Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__PO_Number__c</fullName>
        <description>Purchase order number.  Used when generating PaymentConnect invoices.</description>
        <inlineHelpText>Purchase order number.  Used when generating PaymentConnect invoices.</inlineHelpText>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Paid_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked by PaymentConnect when payments equal or exceed the opportunity amount (if &gt;0).</inlineHelpText>
        <label>Paid Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Payments_Made__c</fullName>
        <inlineHelpText>Total of settled payments related to this opportunity. This field is updated automatically when a payment record is added, updated or removed.</inlineHelpText>
        <label>Payments Made</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Period__c</fullName>
        <inlineHelpText>Recurring payments period.</inlineHelpText>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>SemiMonth</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Recurring_Amount__c</fullName>
        <label>Recurring Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Shipping__c</fullName>
        <inlineHelpText>PaymentConnect Shipping Amount</inlineHelpText>
        <label>Shipping</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__SiteQuote_Expiration__c</fullName>
        <inlineHelpText>Date that the web-accessible quote on this opportunity expires.  Leave blank to disable the site quote entirely.</inlineHelpText>
        <label>SiteQuote Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__SiteQuote_Recurring_Setup__c</fullName>
        <inlineHelpText>Defines the way recurring payment terms should presented up on the web-accessible quote or invoice page for this opportunity. Note that the payment processor selected for the site may also influence the way subscriptions can be setup.</inlineHelpText>
        <label>Sites Recurring Payment Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Amount + Recurring Payments</fullName>
                </value>
                <value>
                    <fullName>Recurring Payments = Total Amount</fullName>
                </value>
                <value>
                    <fullName>Total Amount Includes First Recurring Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Site_Name__c</fullName>
        <description>Database name of Sites website or community portal to publish quote or invoice to (optional).</description>
        <inlineHelpText>Database name of Sites website or community portal to publish quote or invoice to (optional).  If listing multiple site names separate with a comma.</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Subscription_Start_Date__c</fullName>
        <inlineHelpText>Date to start recurring or subscription payments</inlineHelpText>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pymt__Tax__c</fullName>
        <inlineHelpText>PaymentConnect tax amount</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pymt__Total_Amount__c</fullName>
        <formula>Amount +  pymt__Shipping__c +  pymt__Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PaymentConnect total calculated amount (Opportunity amount + shipping + tax)</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quot__Due_Date__c</fullName>
        <description>Invoice due date.</description>
        <inlineHelpText>Invoice due date.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>quot__Invoice_Date__c</fullName>
        <description>Date to display on customer invoice.</description>
        <inlineHelpText>Date to display on customer invoice.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>quot__Publish_As_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes this opportunity visible to the customer as an online invoice using Linvio Quotes &amp; Invoices.</description>
        <inlineHelpText>Makes this opportunity visible to the customer as an online invoice using Linvio Quotes &amp; Invoices.</inlineHelpText>
        <label>Publish As Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Publish_As_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes this opportunity visible to the customer as an online quote using Linvio Quotes &amp; Invoices.</description>
        <inlineHelpText>Makes this opportunity visible to the customer as an online quote using Linvio Quotes &amp; Invoices.</inlineHelpText>
        <label>Publish As Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quot__Quote_Approved__c</fullName>
        <inlineHelpText>Date/Time of customer acceptance of quote and terms &amp; conditions.</inlineHelpText>
        <label>Quote Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quot__Quote_Number__c</fullName>
        <inlineHelpText>Assign a quote number that customers will see on pdf and visualforce quotes pages.</inlineHelpText>
        <label>Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quot__Quote_Version__c</fullName>
        <inlineHelpText>Current version number for quotes built from this opportunity.</inlineHelpText>
        <label>Quote Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quot__Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Shipping</fullName>
                </value>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quot__Terms_and_Conditions_RT__c</fullName>
        <description>Rich text field use for terms and conditions if Quotes and Invoices is configured to use the SF rich text editor on Opps</description>
        <label>Terms and Conditions RT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>quot__Terms_and_Conditions__c</fullName>
        <description>Quotes and Invoices terms and conditions.</description>
        <inlineHelpText>Quotes and Invoices terms and conditions.</inlineHelpText>
        <label>Terms and Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>